--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,7 +13,8 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme myst_parser
+          pip3 install sphinx sphinx_rtd_theme myst_parser
+          pip3 install numpy
       - name: Sphinx build
         run: |
           make html
