--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           pip3 install sphinx sphinx_rtd_theme myst_parser
           pip3 install numpy
+          pip3 install pathos
       - name: Sphinx build
         run: |
           make html
