--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -25,5 +25,5 @@ jobs:
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ISARA_Code/build/html/
+          publish_dir: build/
           force_orphan: true
